[project]
name = "yamapan"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rin Iwai", email = "rin@eyrin.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"yamapan" = "yamapan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/yamapan"]
